<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
              <!--android:orientation="vertical"-->
              <!--android:layout_width="fill_parent"-->
              <!--android:layout_height="fill_parent"-->
              <!--android:background="@color/white"-->
        <!-->-->
<!--<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@color/white"-->
            <!--android:columnCount="1"-->
            <!--android:rowCount="2"-->
                <!-->-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                >
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"/>
        <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType=""/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"/>
        <EditText
                android:id="@+id/pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textPassword"/>
    <requestFocus />
    />
        <Button
                android:id="@+id/loginButoon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                />
</LinearLayout>